# coder-crew

./: .gitignore  README.md  instructions.txt  pyproject.toml
src/coder_crew/: coder.py  main.py
tests/: test_coder.py
